--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Cook, Stage & Package UE Project
         uses: OrchidIsle/UE5-Build-Project@latest
         with:
-          RUNUAT_PATH: 'e:/Program Files/Epic Games/UE_5.5/Engine/Build/RunUAT.bat'
+          RUNUAT_PATH: 'e:/Program Files/Epic Games/UE_5.5/Engine/Build/BatchFiles/RunUAT.bat'
           UPROJECT_PATH: '${{ github.workspace }}/UEThirdPerson55gh/ThirdPerson55.uproject'
           BUILD_CONFIG: Development
           PLATFORM: Win64
