--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: OrchidIsle/UE5-Build-Project@latest
         with:
           RUNUAT_PATH: 'e:/Program Files/Epic Games/UE_5.5/Engine/Build/BatchFiles/RunUAT.bat'
-          UPROJECT_PATH: '${{ github.workspace }}/UEThirdPerson55gh/ThirdPerson55.uproject'
+          UPROJECT_PATH: '${{ github.workspace }}/ThirdPerson55.uproject'
           BUILD_CONFIG: Development
           PLATFORM: Win64
           CLEAN: true
