Changed module reference.

--- a/Plugins/UEGitPlugin/GitSourceControl.uplugin
+++ b/Plugins/UEGitPlugin/GitSourceControl.uplugin
@@ -16,7 +16,7 @@
 	"Modules": [
 		{
 			"Name": "GitSourceControl",
-			"Type": "Runtime",
+			"Type": "UncookedOnly",
 			"LoadingPhase": "Default"
 		}
 	]
