--- a/ThirdPerson55.uproject
+++ b/ThirdPerson55.uproject
@@ -8,6 +8,11 @@
 			"Name": "ThirdPerson55",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "GitSourceControl",
+			"Type": "UncookedOnly",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
