--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Cook, Stage & Package UE Project
-        uses: OrchidIsle/UE5-Build-Project@latest
+        uses: ArmainAP/UE5-Build-Project@main
         with:
           RUNUAT_PATH: 'e:/Program Files/Epic Games/UE_5.5/Engine/Build/BatchFiles/RunUAT.bat'
           UPROJECT_PATH: '${{ github.workspace }}/ThirdPerson55.uproject'
